package domain.enumerados;

public enum EstadoSolicitud { PENDIENTE, RECHAZADA, ACEPTADA}
