@startuml

interface Criterio {
    +cumpleCriterio(hecho: Hecho): boolean
}

abstract class Fuente {
    +leerHechos(): void
    +getHechos(): List<Hecho>
}

class Coleccion {
    -titulo: String
    -descripcion: String
    -fuente: Fuente
    -criterios: Set<Criterio>
    -hechosDeLaColeccion: List<Hecho>
    +filtrarHechos(): void
    +agregarHechos(hechos: List<Hecho>): void
    +cumpleLosCriterios(hecho: Hecho): boolean
    +noFueEliminado(hecho: Hecho): boolean
    +agregarCriterios(criterio: Criterio...): void
}

class FuenteEstatica extends Fuente{
    -ruta: String
    -hechosCargados: List<Hecho>

    +cargarHechos(nuevosHechos: Hecho...): void
    +getHechos(): List<Hecho>
    +leerHechos(): void
}

class FuenteDinamica extends Fuente{
    -hechosCargados: List<Hecho>

    +cargarHechos(nuevosHechos: Hecho...): void
    +getHechos(): List<Hecho>
    +leerHechos(): void
}

class FuenteIntermedia extends Fuente{
    -hechosCargados: List<Hecho>

    +cargarHechos(nuevosHechos: Hecho...): void
    +getHechos(): List<Hecho>
    +leerHechos(): void
}

class Hecho {
    -titulo: String
    -descripcion: String
    -categoria: Categoria
    -ubicacion: Ubicacion
    -fecha_acontecimiento: LocalDate
    -fecha_carga: LocalDate
    -origen: Origen
    -fueEliminado: boolean
    -etiquetas: Set<Etiqueta>

    +agregarEtiqueta(etiqueta: Etiqueta): void
}

class Categoria {
    -nombre: String
}

enum Origen {
    CARGA_MANUAL
    PROVENIENTE_DE_DATASET
    PROVISTO_POR_CONTRIBUYENTE
}

class Etiqueta {
    -nombre: String

}

class CriterioTitulo implements Criterio{
    -titulo: String

    +cumpleCriterio(hecho: Hecho): boolean
}

class CriterioDescripcion implements Criterio{
    -descripcion: String

    +cumpleCriterio(hecho: Hecho): boolean
}

class CriterioCategoria implements Criterio{
    -categoria: String

    +cumpleCriterio(hecho: Hecho): boolean
}

class CriterioLugar implements Criterio {
    -ubicacion: Ubicacion
    -rangoMaximo: Integer

    +cumpleCriterio(hecho: Hecho): boolean
}

class CriterioFechaAcontecimiento implements Criterio{
    -desde: LocalDate
    -hasta: LocalDate

    +cumpleCriterio(hecho: Hecho): boolean
}

class CriterioFechaCarga implements Criterio{
    -desde: LocalDate
    -hasta: LocalDate

    +cumpleCriterio(hecho: Hecho): boolean
}

class CriterioOrigen implements Criterio{
    -origen: Origen

    +cumpleCriterio(hecho: Hecho): boolean
}

class Solicitud {
    -hecho: Hecho
    -justificacion: String
    -estado: EstadoSolicitud
    -administradorQueAtendio: Administrador
    -fechaEntrada: LocalDateTime
    -fechaAtencion: LocalDateTime

    +cambiarEstado(nuevoEstado: EstadoSolicitud): void
}

class Contribuyente {
    -nombre: String
    -apellido: String
    -fechaDeNacimiento: LocalDate

    +getEdad(): Integer
}

class Ubicacion{
    -latitud: double
    -longitud: double
}

enum EstadoSolicitud {
    PENDIENTE
    RECHAZADA
    ACEPTADA
}

class Administrador {
    -nombre: String
    -apellido: String
}

class Servicio_Agregacion{

}

Coleccion --> "*" Criterio
Coleccion --> "*" Hecho
Coleccion --> Fuente
Hecho --> Origen
Hecho --> "*" Etiqueta
Solicitud --> Hecho
Solicitud --> EstadoSolicitud
Solicitud --> Administrador
Solicitud --> "*" Contribuyente
FuenteEstatica --> Hecho
Hecho --> Ubicacion
Hecho --> Categoria

@enduml
